--- a/tets/ui.html
+++ b/tets/ui.html
@@ -1,7 +1,8 @@
 <style>
   .button {
     width: 100%;
-    height: 20%;
+    /* height: 20%; */
+    height: 50px;
     background-color: #2E2929;
     color: #FFF;
     font-family: "Alata", sans-serif;
@@ -38,7 +39,8 @@
 
   .half-button {
     width: 50%;
-    height: 100%;
+    /* height: 100%; */
+    height: 50px;
     background-color: #2E2929;
     color: #FFF;
     font-family: "Alata", sans-serif;
@@ -105,7 +107,7 @@
   }
 </style>
 
-<body style="background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%;">
+<body style="background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%; overflow: hidden">
 
   <h2 style="margin-top: 5%; margin-left: 3%; font-size: 25px;">ArtiFig</h2>
   <h4 class="text">Make you design easier and more unique with some of your own art! </h4>
