--- a/tets/ui2.html
+++ b/tets/ui2.html
@@ -7,7 +7,8 @@
 
   .button {
     width: 100%;
-    height: 20%;
+    /* height: 20%; */
+    height: 50px;
     background-color: #2E2929;
     color: #FFF;
     font-family: "Alata", sans-serif;
@@ -44,7 +45,8 @@
 
   .half-button {
     width: 50%;
-    height: 100%;
+    /* height: 100%; */
+    height: 50px;
     background-color: #2E2929;
     color: #FFF;
     font-family: "Alata", sans-serif;
@@ -105,8 +107,6 @@
     margin-top: 0%;
   }
 
-
-  /* The container <div> - needed to position the dropdown content */
   .dropdown {
     width: 100%;
     position: relative;
@@ -165,7 +165,7 @@
   }
 </style>
 
-<body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%;">
+<body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%; overflow: hidden;">
 
   <h2 class="title">Layer management</h2>
   <button id="create" class="button">New layer</button>
