--- a/tets/home.html
+++ b/tets/home.html
@@ -107,7 +107,7 @@
   }
 </style>
 
-<body style="background-color: #2E2929; color: #CCCCCC; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%; overflow: hidden">
+<body style="background-color: #2E2929; color: #f8f8f8; font-family: 'Alata', sans-serif; margin: 0%; padding: 0%; overflow: hidden">
 
   <h2 style="margin-top: 5%; margin-left: 3%; font-size: 25px;">ArtiFig</h2>
   <h4 class="text">Make you design easier and more unique with some of your own art! </h4>
@@ -139,8 +139,6 @@
     elem.href = window.URL.createObjectURL(blob);
     elem.download = filename;
 
-    // elem.setAttribute('style', 'display:none;opacity:0;color:transparent;')
-
     (document.body || document.documentElement).appendChild(elem);
     if (typeof elem.click === 'function') {
       elem.click();
@@ -167,6 +165,7 @@
     const height = document.getElementById('sizeY').value;
 
     parent.postMessage({ pluginMessage: { type: 'create', width, height } }, '*')
+    document.getElementById('frame-size').style.display = 'none'
   }
 
   document.getElementById('close').onclick = () => {
@@ -198,7 +197,4 @@
     }
   }
 
-  // document.getElementById('brush').onclick =() =>{
-  //   parent.postMessage({pluginMessage:{type: 'brush'}}, '*')
-  // }
 </script>
