--- a/tets/layers.html
+++ b/tets/layers.html
@@ -104,64 +104,72 @@
 
   .popup-text {
     margin-left: 2%;
-    margin-top: 0%;
+    margin-top: 2%;
+    font-family: "Alata", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
   }
 
   .dropdown {
     width: 100%;
     position: relative;
     display: inline-block;
+    margin-bottom: 0px;
   }
 
-  .drop-btn {
-    width: 100%;
-    height: 10%;
-    background-color: #5C5470;
-    color: #FFF;
-    font-family: "Alata", sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-align: left;
-    padding: 10px;
-    transition: background-color 0.2s ease;
-    border-style: solid;
-    border-top: 1%;
-    border-top-color: #2E2929;
-    border-top-width: 1%;
-    border-bottom: none;
-    border-left: none;
-    border-right: none;
-    box-shadow: none;
-  }
+.drop-btn {
+  width: 100%;
+  height: 10%;
+  background-color: #5C5470;
+  color: #FFF;
+  font-family: "Alata", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  text-align: left; 
+  display: flex; 
+  align-items: center; 
+  justify-content: flex-start; 
+  padding:  10px; 
+  transition: background-color 0.2s ease;
+  border-style: solid;
+  border-top: 1%;
+  border-top-color: #2E2929;
+  border-top-width: 1%;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  box-shadow: none;
+  margin-bottom: 0px;
+}
 
-  /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    margin-bottom: 0px;
   }
 
-  /* Links inside the dropdown */
   .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 12px 0px;
     text-decoration: none;
     display: block;
+    margin-bottom: 0px;
   }
 
-  /* Change color of dropdown links on hover */
   .dropdown-content a:hover {
     background-color: #ddd;
+
   }
 
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
   .show {
     display: block;
+    margin-bottom: 0px;
   }
 </style>
 
@@ -177,10 +185,7 @@
       <button id="inverted" class="drop-btn">Inverted</button>
     </div>
   </div>
-  <!-- <button id="filter" class="button">Add filter</button> -->
   <button id="merge" class="button">Merge layers</button>
-
-  
 
   <div class="popup" id="popup-merge">
     <p class="popup-text">Make sure to select at least two layers
@@ -203,8 +208,6 @@
     let elem = window.document.createElement('a');
     elem.href = window.URL.createObjectURL(blob);
     elem.download = filename;
-
-    // elem.setAttribute('style', 'display:none;opacity:0;color:transparent;')
 
     (document.body || document.documentElement).appendChild(elem);
     if (typeof elem.click === 'function') {
@@ -274,7 +277,6 @@
     document.getElementById("myDropdown").classList.toggle("show");
   }
 
-  // Close the dropdown menu if the user clicks outside of it
   window.onclick = function (event) {
     if (!event.target.matches('.button')) {
       var dropdowns = document.getElementsByClassName("dropdown-content");
@@ -287,6 +289,5 @@
       }
     }
   }
-
 
 </script>
