--- a/tets/canvas.html
+++ b/tets/canvas.html
@@ -60,6 +60,14 @@
         width: 100%;
     }
 
+    .btn:hover {
+        background-color: #73698d;
+    }
+
+    .btn:active {
+        background-color: #524848;
+    }
+
     input {
         width: 100%;
         margin-bottom: 10px;
@@ -78,14 +86,32 @@
         display: none;
         margin-top: 10px;
     }
+
+    .popup {
+        display: none;
+        position: fixed;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 10%;
+        background-color: #610923b4;
+        z-index: 2;
+    }
+
+    .popup-text {
+        font-size: 20px;
+        font-weight: 700;
+        margin-left: 2%;
+        margin-top: 2%;
+    }
 </style>
 
 
 <body style="background-color: #2E2929; color: #CCCCCC; font-family: 'Lato', serif; overflow: hidden;">
     <div id="sidebar" style="margin-right: 5%;">
         <div class="colorButtons">
-            <h3>Pen tool</h3>
-            <button id="pen" class="btn">pen</button>
+            <h3>Brush tool</h3>
+            <button id="pen" class="btn">Brush</button>
             <input type="color" id="colorpicker" value="#c81464" class="colorpicker">
         </div>
 
@@ -130,7 +156,12 @@
         </div>
     </div>
 
-    <canvas id="canvas" style="margin-right: 5%; margin-left: 25%;"></canvas>
+    <div>
+        <div class="popup" id="popup-canvas">
+            <p class="popup-text">The canvas dimension were impossible value! It must not be a negative value!</p>
+        </div>
+        <canvas id="canvas" style="margin-right: 5%; margin-left: 25%;"></canvas>
+    </div>
 </body>
 
 <script>
@@ -248,6 +279,13 @@
     }
 
     function createCanvas() {
+        if (document.getElementById("sizeX").value < 0 || document.getElementById("sizeY").value < 0) {
+            document.getElementById('popup-canvas').style.display = 'block'
+            setTimeout(function () {
+                document.getElementById('popup-canvas').style.display = 'none';
+            }, 3000);
+            return;
+        }
         canvas.width = parseInt(document.getElementById("sizeX").value);
         canvas.height = parseInt(document.getElementById("sizeY").value);
         ctx.fillStyle = currentBg;
