--- a/tets/canvas.html
+++ b/tets/canvas.html
@@ -110,8 +110,8 @@
 <body style="background-color: #2E2929; color: #CCCCCC; font-family: 'Lato', serif; overflow: hidden;">
     <div id="sidebar" style="margin-right: 5%;">
         <div class="colorButtons">
-            <h3>Brush tool</h3>
-            <button id="pen" class="btn">Brush</button>
+            <h3>Pen tool</h3>
+            <button id="pen" class="btn">Pen</button>
             <input type="color" id="colorpicker" value="#c81464" class="colorpicker">
         </div>
 
